<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_classAndErrorNum" Id="{f7d9e815-2677-48f5-9d22-d958645d31ee}">
    <Declaration><![CDATA[TYPE ST_classAndErrorNum :
	STRUCT
		errorId					: STRING(3);
		classId					: STRING(3);
		telegramSending	: STRING(1);
		hmiErrorShow		: STRING(1);
		instanceNum			: BYTE;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>