<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SP_ClassReturn" Id="{a47381df-3f15-4c0c-9fae-22f71dc4012f}">
    <Declaration><![CDATA[TYPE ST_SP_ClassReturn :
STRUCT
	tableId: UDINT;
	classId: STRING(3);
	className: T_MaxString;
	instanceNum: BYTE;
	objDescriptMsg:	T_MaxString;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>